[gd_scene load_steps=7 format=3 uid="uid://cddbk8rjg3p6g"]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_8dh26"]
[ext_resource type="PackedScene" uid="uid://bvs1pun80be5c" path="res://scenes/menu/main_menu_scene.tscn" id="2_47vcl"]
[ext_resource type="PackedScene" uid="uid://b3jceichgrcoh" path="res://scenes/character/character.tscn" id="3_ywd4b"]
[ext_resource type="SpriteFrames" uid="uid://bwcre7vjfwoci" path="res://resources/characters/ninja_frog.tres" id="4_n43hx"]

[sub_resource type="SystemFont" id="SystemFont_80oy6"]
font_names = PackedStringArray("Cooper")

[sub_resource type="SystemFont" id="SystemFont_bi1ix"]
font_names = PackedStringArray("Cooper")

[node name="Main_menu" type="Control"]
layout_mode = 3
anchor_right = 0.378
anchor_bottom = 0.378
offset_right = 717.544
offset_bottom = 405.056
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8dh26")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(577, 326)

[node name="Main_menu_scene" parent="." instance=ExtResource("2_47vcl")]

[node name="Character" parent="." instance=ExtResource("3_ywd4b")]
position = Vector2(578, 572)
Sprite_Frames = ExtResource("4_n43hx")

[node name="Title" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.0
offset_right = 46.0
offset_bottom = 40.0
grow_horizontal = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HSeparator" type="HSeparator" parent="Title"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 65

[node name="Label" type="Label" parent="Title"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 20
theme_override_fonts/font = SubResource("SystemFont_80oy6")
theme_override_font_sizes/font_size = 64
text = "FRUIT RUSH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu_buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -51.5
offset_right = 35.0
offset_bottom = 51.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HSeparator" type="HSeparator" parent="Menu_buttons"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 50

[node name="NewGame" type="Button" parent="Menu_buttons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.124513, 0.606591, 0.621937, 1)
theme_override_fonts/font = SubResource("SystemFont_bi1ix")
theme_override_font_sizes/font_size = 44
text = "START"

[node name="HSeparator2" type="HSeparator" parent="Menu_buttons"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 30

[node name="Options" type="Button" parent="Menu_buttons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.124513, 0.606591, 0.621937, 1)
theme_override_fonts/font = SubResource("SystemFont_bi1ix")
theme_override_font_sizes/font_size = 44
text = "OPTIONS"

[node name="HSeparator3" type="HSeparator" parent="Menu_buttons"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 30

[node name="Quit" type="Button" parent="Menu_buttons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.124513, 0.606591, 0.621937, 1)
theme_override_fonts/font = SubResource("SystemFont_bi1ix")
theme_override_font_sizes/font_size = 44
text = "QUIT"

[connection signal="pressed" from="Menu_buttons/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Menu_buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu_buttons/Quit" to="." method="_on_quit_pressed"]
